# space-shoot-demo

./: .gitignore  CMakeLists.txt  TO DO.md  readme.md
src/: DestroyEffect.cpp  DestroyEffect.hpp  Scene.cpp  Scene.hpp  bullet.cpp  bullet.hpp  config.hpp  destroy_effect.cpp  destroy_effect.hpp  drop.cpp  drop.hpp  enemy.cpp  enemy.hpp  main.cpp  player.cpp  player.hpp  star.cpp  star.hpp
